<resources>
    <string name="app_name">SalleOccupationQr</string>
    <string name="scan">Scan</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ibrahim Chahboune</string>
    <string name="nav_header_subtitle">ibrahimchahboune@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_salles">Salles</string>
    <string name="menu_book">Book a Salle</string>

    <string name="endpoint">https://sallebloc.herokuapp.com/</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_history">History</string>
    <string name="stats">Stats</string>
    <string name="my_app_name">Salle Occupation</string>
    <string name="book_salle_by_creneau">Book Salle By Creneau</string>
    <string name="book_salle_by_creneau_2">Book a salle by Creneau</string>
    <string name="stats_1">Statistics</string>
    <string name="history">History</string>
</resources>